[gd_scene load_steps=8 format=2]

[ext_resource path="res://Creatures/Rat.png" type="Texture" id=1]
[ext_resource path="res://Creatures/Creature.gd" type="Script" id=2]
[ext_resource path="res://Creatures/RatStats.tres" type="Resource" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="CircleShape2D" id=2]
radius = 32.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.301961, 0.301961, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 1 )

[node name="Creature" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )
stats = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TargetFinder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TargetFinder"]
shape = SubResource( 2 )

[node name="DefaultTarget" type="Position2D" parent="."]
position = Vector2( 8, 0 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="."]
margin_left = -8.0
margin_top = -24.0
margin_right = 8.0
margin_bottom = -23.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false

[connection signal="area_entered" from="TargetFinder" to="." method="_on_TargetFinder_area_entered"]
[connection signal="area_exited" from="TargetFinder" to="." method="_on_TargetFinder_area_exited"]
